Modificaciones para el bounce out de las bolas verdes y amarillas

--- a/css/mast_1.css
+++ b/css/mast_1.css
@@ -38,4 +38,8 @@
 .bounceOut { 
     -webkit-animation-name: bounceOut; 
     animation-name: bounceOut; 
+    -webkit-animation:bounceOut 2s; /* Chrome, Safari, Opera */
+    transform-origin:198.047px 220.616px;
+    -ms-transform-origin:198.047px 220.616px; /* IE 9 */
+    -webkit-transform-origin:198.047px 220.616px; /* Chrome, Safari, Opera */
 }
